--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==3.2.16
 django-allauth==0.41.0
+django-crispy-forms==1.14.0
 django-phonenumber-field==3.0.1
 django-phonenumbers==1.0.1
 gunicorn==20.1.0
